--- a/index.ipynb
+++ b/index.ipynb
@@ -140,7 +140,8 @@
    "outputs": [],
    "source": [
     "def is_even(number):\n",
-    "    return number % 2 == 0"
+    "    return number % 2 == 0\n",
+    "def is_"
    ]
   },
   {
