--- a/index.ipynb
+++ b/index.ipynb
@@ -141,7 +141,8 @@
    "source": [
     "def is_even(number):\n",
     "    return number % 2 == 0\n",
-    "def is_"
+    "def is_even(number):\n",
+    "    return number"
    ]
   },
   {
