Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -135,14 +135,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def is_even(number):\n",
     "    return number % 2 == 0\n",
     "def is_even(number):\n",
-    "    return number"
+    "    return number % 2 ==0"
    ]
   },
   {
