Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -161,7 +161,8 @@
    ],
    "source": [
     "print(is_even(3)) # False\n",
-    "print(is_even(100)) # True"
+    "print(is_even(100)) # True\n",
+    "print(is_even(5))"
    ]
   },
   {
