--- a/index.ipynb
+++ b/index.ipynb
@@ -162,7 +162,8 @@
    "source": [
     "print(is_even(3)) # False\n",
     "print(is_even(100)) # True\n",
-    "print(is_even(5))"
+    "print(is_even(5))\n",
+    "print(is_even(80))"
    ]
   },
   {
