Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -147,13 +147,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "False\n",
+      "True\n",
       "False\n",
       "True\n"
      ]
