Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -179,7 +179,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we are ready to write our function that selects just even numbers.  We can iterate through the numbers one by one, and for each number, check if that number is even.  If it's even then append the element to a new list of even numbers."
+    "## Now we are ready to write our function that selects just even numbers.  We can iterate through the numbers one by one, and for each number, check if that number is even.  If it's even then append the element to a new list of even numbers."
    ]
   },
   {
