--- a/index.ipynb
+++ b/index.ipynb
@@ -186,7 +186,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def select_even(elements):\n",
+    "def \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "select_even(elements):\n",
     "    selected = []\n",
     "    for element in elements:\n",
     "        if is_even(element):\n",
