Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -186,7 +186,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def \n",
+    "def select_even\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "\n",
