Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -187,7 +187,8 @@
    "outputs": [],
    "source": [
     "def select_even(numbers):\n",
-    "    for number in numbers\n",
+    "    for number in numbers:\n",
+    "        \n",
     "\n",
     "\n",
     "\n",
