Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -146,7 +146,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -188,7 +190,7 @@
    "source": [
     "def select_even(numbers):\n",
     "    for number in numbers:\n",
-    "        \n",
+    "        return \n",
     "        \n",
     "\n",
     "\n",
