Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -190,7 +190,8 @@
    "source": [
     "def select_even(numbers):\n",
     "    for number in numbers:\n",
-    "        return \n",
+    "        return number % 2 == 0\n",
+    "    \n",
     "        \n",
     "\n",
     "\n",
