--- a/index.ipynb
+++ b/index.ipynb
@@ -191,7 +191,8 @@
     "def select_even(numbers):\n",
     "    for number in numbers:\n",
     "        return number % 2 == 0\n",
-    "    \n",
+    "    else:\n",
+    "        \n",
     "        \n",
     "\n",
     "\n",
