--- a/index.ipynb
+++ b/index.ipynb
@@ -189,6 +189,7 @@
    "outputs": [],
    "source": [
     "def select_even(numbers):\n",
+    "    selected = []\n",
     "    for number in numbers:\n",
     "        return number % 2 == 0\n",
     "    else:\n",
