Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -192,7 +192,7 @@
     "    selected = [ ]\n",
     "    for number in numbers:\n",
     "        if number % 2 == 0\n",
-    "         \n",
+    "           selected.appen()\n",
     "    else:\n",
     "        \n",
     "        \n",
