Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -192,8 +192,8 @@
     "    selected = [ ]\n",
     "    for number in numbers:\n",
     "        if number % 2 == 0\n",
-    "           selected.appen()\n",
-    "    else:\n",
+    "           selected.appen(number)\n",
+    "    e\n",
     "        \n",
     "        \n",
     "\n",
