Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -193,7 +193,7 @@
     "    for number in numbers:\n",
     "        if number % 2 == 0\n",
     "           selected.appen(number)\n",
-    "    e\n",
+    "    return selected\n",
     "        \n",
     "        \n",
     "\n",
