Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -192,7 +192,7 @@
     "    selected = [ ]\n",
     "    for number in numbers:\n",
     "        if number % 2 == 0\n",
-    "           selected.appen(number)\n",
+    "           selected.append(number)\n",
     "    return selected\n",
     "        \n",
     "        \n",
