Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -196,21 +196,7 @@
     "    return selected\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "select_even(elements):\n",
+    "def select_even(elements):\n",
     "    selected = []\n",
     "    for element in elements:\n",
     "        if is_even(element):\n",
