--- a/index.ipynb
+++ b/index.ipynb
@@ -184,24 +184,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-5-a3204f7ecb59>, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-5-a3204f7ecb59>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    if number % 2 == 0\u001b[0m\n\u001b[0m                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def select_even(numbers):\n",
     "    selected = [ ]\n",
     "    for number in numbers:\n",
     "        if number % 2 == 0\n",
     "           selected.append(number)\n",
-    "    return selected\n",
-    "\n",
-    "\n",
-    "def select_even(elements):\n",
-    "    selected = []\n",
-    "    for element in elements:\n",
-    "        if is_even(element):\n",
-    "            selected.append(element)\n",
-    "    return selected"
+    "    return selected\n"
    ]
   },
   {
