Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -202,7 +202,16 @@
     "    for number in numbers:\n",
     "        if number % 2 == 0\n",
     "           selected.append(number)\n",
-    "    return selected\n"
+    "    return selected\n",
+    "\n",
+    "\n",
+    "\n",
+    "def select_even(elements):\n",
+    "    selected = []\n",
+    "    for element in elements:\n",
+    "        if is_even(element):\n",
+    "            selected.append(element)\n",
+    "    return selected"
    ]
   },
   {
