Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -200,7 +200,7 @@
     "def select_even(numbers):\n",
     "    selected = [ ]\n",
     "    for number in numbers:\n",
-    "        if is\n",
+    "        if is_even(num)\n",
     "           selected.append(number)\n",
     "    return selected\n",
     "\n",
