Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -200,8 +200,8 @@
     "def select_even(numbers):\n",
     "    selected = [ ]\n",
     "    for number in numbers:\n",
-    "        if is_even(num)\n",
-    "           selected.append(number)\n",
+    "        if is_even(number):\n",
+    "            selected.append(number)\n",
     "    return selected\n",
     "\n",
     "\n",
