Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -184,34 +184,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-5-a3204f7ecb59>, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-5-a3204f7ecb59>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    if number % 2 == 0\u001b[0m\n\u001b[0m                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def select_even(numbers):\n",
     "    selected = [ ]\n",
     "    for number in numbers:\n",
     "        if is_even(number):\n",
     "            selected.append(number)\n",
-    "    return selected\n",
-    "\n",
-    "\n",
-    "\n",
-    "def select_even(elements):\n",
-    "    selected = []\n",
-    "    for element in elements:\n",
-    "        if is_even(element):\n",
-    "            selected.append(element)\n",
-    "    return selected"
+    "    return selected\n"
    ]
   },
   {
