Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -193,12 +193,12 @@
     "    for number in numbers:\n",
     "        if is_even(number):\n",
     "            selected.append(number)\n",
-    "    return selected\n"
+    "    return selected"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
        "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
