Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -268,6 +268,10 @@
     }
    ],
    "source": [
+    "def e\n",
+    "\n",
+    "\n",
+    "\n",
     "def ends_ing(word):\n",
     "    return word.endswith('ing')\n",
     "\n",
