--- a/index.ipynb
+++ b/index.ipynb
@@ -268,7 +268,8 @@
     }
    ],
    "source": [
-    "def ends_ing(words)\n",
+    "def ends_ing(word):\n",
+    "    \n",
     "\n",
     "\n",
     "\n",
