Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -269,7 +269,7 @@
    ],
    "source": [
     "def ends_ing(word):\n",
-    "    \n",
+    "    return word.end\n",
     "\n",
     "\n",
     "\n",
