Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -269,7 +269,9 @@
    ],
    "source": [
     "def ends_ing(word):\n",
-    "    return word.end\n",
+    "    return word.endswith('ing')\n",
+    "\n",
+    "def sel\n",
     "\n",
     "\n",
     "\n",
