Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -271,7 +271,7 @@
     "def ends_ing(word):\n",
     "    return word.endswith('ing')\n",
     "\n",
-    "def sel\n",
+    "def select_ing(words):\n",
     "\n",
     "\n",
     "\n",
