Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -271,7 +271,8 @@
     "def ends_ing(word):\n",
     "    return word.endswith('ing')\n",
     "\n",
-    "def select_ing(words):\n",
+    "def select_ing(elements):\n",
+    "    selected \n",
     "\n",
     "\n",
     "\n",
