Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -272,7 +272,8 @@
     "    return word.endswith('ing')\n",
     "\n",
     "def select_ing(elements):\n",
-    "    selected \n",
+    "    selected = []\n",
+    "    for element in elements:\n",
     "\n",
     "\n",
     "\n",
