--- a/index.ipynb
+++ b/index.ipynb
@@ -274,6 +274,7 @@
     "def select_ing(elements):\n",
     "    selected = []\n",
     "    for element in elements:\n",
+    "        if ends_ing\n",
     "\n",
     "\n",
     "\n",
