Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -274,7 +274,8 @@
     "def select_ing(elements):\n",
     "    selected = []\n",
     "    for element in elements:\n",
-    "        if ends_ing\n",
+    "        if ends_ing(element):\n",
+    "            selec\n",
     "\n",
     "\n",
     "\n",
