Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -275,7 +275,8 @@
     "    selected = []\n",
     "    for element in elements:\n",
     "        if ends_ing(element):\n",
-    "            selec\n",
+    "            selected.append(element)\n",
+    "    return\n",
     "\n",
     "\n",
     "\n",
