--- a/index.ipynb
+++ b/index.ipynb
@@ -276,7 +276,7 @@
     "    for element in elements:\n",
     "        if ends_ing(element):\n",
     "            selected.append(element)\n",
-    "    return\n",
+    "    return selected\n",
     "\n",
     "\n",
     "\n",
